2006-04-25  Stefan Jahn  <stefan@lkcc.org>

	* tvector.cpp: Added '*=' and '/=' operators for scalar
	arguments.

	* hbsolver.cpp: Non-linear equations system is now smoothly
	converging for our simple Vac-R-R-Diode example.

2006-04-23  Stefan Jahn  <stefan@lkcc.org>

	* hbsolver.cpp: Re-implemented the FFT of a matrix using the
	block-diagonal property of Jacobians in the time domain.
	Extended the termination criteria using the iteration voltages.

	* parse_netlist.y: Fixed a small bug occurring when an instance
	of a (1) component, (2) action, (3) equation and (4) subcircuit
	or (5) a reference to one of these in a property is named like
	a physical unit or scale, e.g. V, Hz, A or T.

2006-04-15  Stefan Jahn  <stefan@lkcc.org>

	* tvector.cpp: New functions: contains() as well as '+=' and '-='
	operators.

	* tmatrix.cpp: New functions: setCol(), getCol(), setRow(),
	getRow(), set(val) as well as '+=' and '-=' operators.

	* hbsolver.cpp: Implemented non-linear part of the harmonic
	balance as far as possible.  All parts of the algorithm adressed
	but not yet working...

2006-04-06  Stefan Jahn  <stefan@lkcc.org>

	* devstates.h (class devstates): New class going to be used
	by all non-linear components.  Thus it is possible to re-use
	a single instance of a non-linear component class for
	each required HB frequency.

	* hbsolver.cpp: Started to implement the non-linear
	functionality in the HB solver.

	* circuit.cpp: Prepared matrix and vector entries for
	HB analysis.

2006-04-04  Stefan Jahn  <stefan@lkcc.org>

	* fourier.cpp: Implemented multi-dimensional Fast Fourier
	Transformation (also IFFT).

2006-04-03  Stefan Jahn  <stefan@lkcc.org>

	* hbsolver.cpp: Linear HB seems to work now.  Tests needed...

	* parse_netlist.y: Also allow scales and units as node
	identifiers.

2006-03-28  Stefan Jahn  <stefan@lkcc.org>

	* strlist.cpp, ptrlist.cpp: Added a default constructor.

	* hbsolver.cpp: Some more work on the linear solver for
	harmonic balance done...
